--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
-    "expo-document-picker": "~13.1.5"
+    "expo-document-picker": "~13.1.5",
+    "expo-linear-gradient": "~14.1.4",
+    "@tailwindcss/forms": "^0.5.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
