--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "tailwindcss": "^3.4.17",
     "expo-document-picker": "~13.1.5",
     "expo-linear-gradient": "~14.1.4",
-    "@tailwindcss/forms": "^0.5.7"
+    "@tailwindcss/forms": "^0.5.7",
+    "expo-dev-client": "~5.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
